<resources>

    <string name="app_name">My Songs</string>
    <string name="toolbar_title_my_songs">My Songs</string>
    <string name="toolbar_title_song_details">Song Details</string>
    <string name="toolbar_title_add_new_song">Add new song</string>
    <string name="edit_text_hint_search_songs">Search songs</string>
    <string name="deletion_answer_no">No</string>
    <string name="deletion_answer_yes">Yes</string>
    <string name="deletion_question">Do you want to delete this song from your list?</string>
    <string name="add_song">ADD</string>
    <string name="enter_song_title">Song title</string>
    <string name="enter_author_name">Author name</string>
    <string name="enter_song_duration">Song duration</string>
    <string name="enter_image_url">Image url</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourites_songs">Favourite songs</string>

</resources>
