<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:background="@color/primary">

    <TextView
        android:id="@+id/tv_deletion_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/deletion_question"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_answer_yes"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_deletion_question"
        android:layout_marginBottom="@dimen/MediumMargin"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/BigMargin"
        android:background="@color/md_black_1000"
        android:text="@string/deletion_answer_yes"
        android:textColor="@color/md_red_A700" />

    <Button
        android:id="@+id/btn_answer_no"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_deletion_question"
        android:layout_marginBottom="@dimen/MediumMargin"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="@dimen/BigMargin"
        android:background="@color/md_black_1000"
        android:text="@string/deletion_answer_no"
        android:textAlignment="center"
        android:textColor="@color/md_green_400" />


</RelativeLayout>